@@ -1,0 +1,9 @@
+/**
+ * Package containing Reactive AOT runtime hints used by the framework.
+ */
+@NonNullApi
+@NonNullFields
+package org.springframework.pulsar.reactive.aot;
+
+import org.springframework.lang.NonNullApi;
+import org.springframework.lang.NonNullFields;
