@@ -1,0 +1,10 @@
+/**
+ * Package containing model classes to ease testing Spring for Apache Pulsar applications.
+ * @since 1.1.0
+ */
+@NonNullApi
+@NonNullFields
+package org.springframework.pulsar.test.support.model;
+
+import org.springframework.lang.NonNullApi;
+import org.springframework.lang.NonNullFields;
